# hedges

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/: settings.yaml  settings_template.yaml
scripts/: run_all.sh  run_backtest.sh  run_live_trading.sh  run_nlp_pipeline.sh  run_rl_training.sh  run_tests.sh
src/execution/: live_trader.py  portfolio.py
src/nlp_signals/: pipeline.py  sentiment.py
src/rl_trading/: evaluate.py  train.py
src/utils/: config_loader.py  custom_yahoo_downloader.py
tests/: conftest.py  test_backtesting.py  test_execution.py  test_nlp.py  test_rl.py
